tests/ui/consts/const-eval/ub-enum.stderr
error[E0080]: constructing invalid value at .<enum-tag>: encountered 0x01, but expected a valid enum tag
  --> $DIR/ub-enum.rs:29:33
   |
LL | const BAD_ENUM: Enum = unsafe { mem::transmute(1usize) };
   |                                 ^^^^^^^^^^^^^^^^^^^^^^ evaluation of `BAD_ENUM` failed here

error[E0080]: constructing invalid value at .<enum-tag>: encountered a pointer, but expected an integer
  --> $DIR/ub-enum.rs:32:37
   |
LL | const BAD_ENUM_PTR: Enum = unsafe { mem::transmute(&1) };
   |                                     ^^^^^^^^^^^^^^^^^^ evaluation of `BAD_ENUM_PTR` failed here
   |
   = help: this code performed an operation that depends on the underlying bytes representing a pointer
   = help: the absolute address of a pointer is not known at compile-time, so such operations are not supported

error[E0080]: constructing invalid value at .0.<enum-tag>: encountered a pointer, but expected an integer
  --> $DIR/ub-enum.rs:35:47
   |
LL | const BAD_ENUM_WRAPPED: Wrap<Enum> = unsafe { mem::transmute(&1) };
   |                                               ^^^^^^^^^^^^^^^^^^ evaluation of `BAD_ENUM_WRAPPED` failed here
   |
   = help: this code performed an operation that depends on the underlying bytes representing a pointer
   = help: the absolute address of a pointer is not known at compile-time, so such operations are not supported

error[E0080]: constructing invalid value at .<enum-tag>: encountered 0x0, but expected a valid enum tag
  --> $DIR/ub-enum.rs:47:35
   |
LL | const BAD_ENUM2: Enum2 = unsafe { mem::transmute(0usize) };
   |                                   ^^^^^^^^^^^^^^^^^^^^^^ evaluation of `BAD_ENUM2` failed here

error[E0080]: constructing invalid value at .<enum-tag>: encountered a pointer, but expected an integer
  --> $DIR/ub-enum.rs:49:39
   |
LL | const BAD_ENUM2_PTR: Enum2 = unsafe { mem::transmute(&0) };
   |                                       ^^^^^^^^^^^^^^^^^^ evaluation of `BAD_ENUM2_PTR` failed here
   |
   = help: this code performed an operation that depends on the underlying bytes representing a pointer
   = help: the absolute address of a pointer is not known at compile-time, so such operations are not supported

error[E0080]: constructing invalid value at .0.<enum-tag>: encountered a pointer, but expected an integer
  --> $DIR/ub-enum.rs:52:49
   |
LL | const BAD_ENUM2_WRAPPED: Wrap<Enum2> = unsafe { mem::transmute(&0) };
   |                                                 ^^^^^^^^^^^^^^^^^^ evaluation of `BAD_ENUM2_WRAPPED` failed here
   |
   = help: this code performed an operation that depends on the underlying bytes representing a pointer
   = help: the absolute address of a pointer is not known at compile-time, so such operations are not supported

error[E0080]: using uninitialized data, but this operation requires initialized memory
  --> $DIR/ub-enum.rs:61:41
   |
LL | const BAD_ENUM2_UNDEF: Enum2 = unsafe { MaybeUninit { uninit: () }.init };
   |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `BAD_ENUM2_UNDEF` failed here

error[E0080]: constructing invalid value at .<enum-tag>: encountered a pointer, but expected an integer
  --> $DIR/ub-enum.rs:65:54
   |
LL | const BAD_ENUM2_OPTION_PTR: Option<Enum2> = unsafe { mem::transmute(&0) };
   |                                                      ^^^^^^^^^^^^^^^^^^ evaluation of `BAD_ENUM2_OPTION_PTR` failed here
   |
   = help: this code performed an operation that depends on the underlying bytes representing a pointer
   = help: the absolute address of a pointer is not known at compile-time, so such operations are not supported

error[E0080]: constructing invalid value at .<enum-tag>: encountered an uninhabited enum variant
  --> $DIR/ub-enum.rs:82:62
   |
LL | const BAD_UNINHABITED_VARIANT1: UninhDiscriminant = unsafe { mem::transmute(1u8) };
   |                                                              ^^^^^^^^^^^^^^^^^^^ evaluation of `BAD_UNINHABITED_VARIANT1` failed here

error[E0080]: constructing invalid value at .<enum-tag>: encountered an uninhabited enum variant
  --> $DIR/ub-enum.rs:84:62
   |
LL | const BAD_UNINHABITED_VARIANT2: UninhDiscriminant = unsafe { mem::transmute(3u8) };
   |                                                              ^^^^^^^^^^^^^^^^^^^ evaluation of `BAD_UNINHABITED_VARIANT2` failed here

error[E0080]: constructing invalid value: encountered 0xffffffff, but expected a valid unicode scalar value (in `0..=0x10FFFF` but not in `0xD800..=0xDFFF`)
  --> $DIR/ub-enum.rs:92:67
   |
LL | const BAD_OPTION_CHAR: Option<(char, char)> = Some(('x', unsafe { mem::transmute(!0u32) }));
   |                                                                   ^^^^^^^^^^^^^^^^^^^^^ evaluation of `BAD_OPTION_CHAR` failed here

error[E0080]: constructing invalid value at .<enum-tag>: encountered an uninhabited enum variant
  --> $DIR/ub-enum.rs:97:77
   |
LL | const BAD_UNINHABITED_WITH_DATA1: Result<(i32, Never), (i32, !)> = unsafe { mem::transmute(0u64) };
   |                                                                             ^^^^^^^^^^^^^^^^^^^^ evaluation of `BAD_UNINHABITED_WITH_DATA1` failed here

error[E0080]: constructing invalid value at .<enum-tag>: encountered an uninhabited enum variant
  --> $DIR/ub-enum.rs:99:77
   |
LL | const BAD_UNINHABITED_WITH_DATA2: Result<(i32, !), (i32, Never)> = unsafe { mem::transmute(0u64) };
   |                                                                             ^^^^^^^^^^^^^^^^^^^^ evaluation of `BAD_UNINHABITED_WITH_DATA2` failed here

error[E0080]: read discriminant of an uninhabited enum variant
  --> $DIR/ub-enum.rs:105:9
   |
LL |         std::mem::discriminant(&*(&() as *const () as *const Never));
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `TEST_ICE_89765` failed inside this call
   |
note: inside `discriminant::<Never>`
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL

error: aborting due to 14 previous errors

For more information about this error, try `rustc --explain E0080`.
